Reajustes de rabbitConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=ExamenFabricaDeGauss2
+spring.rabbitmq.queue.production=productionQueue
+rabbitmq.queue.assembly=assemblyQueue
+rabbitmq.routing.production=production.routing.key
+rabbitmq.routing.assembly=assembly.routing.key
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
