--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,10 @@
 
     <dependencies>
 
-     
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>        
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
