--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=ExamenFabricaDeGauss2
 spring.rabbitmq.queue.production=productionQueue
-rabbitmq.queue.assembly=assemblyQueue
-rabbitmq.routing.production=production.routing.key
-rabbitmq.routing.assembly=assembly.routing.key
+spring.rabbitmq.exchange=exchange
+spring.rabbitmq.queue.assembly=assemblyQueue
+spring.rabbitmq.routing.production=production.routing.key
+spring.rabbitmq.routing.assembly=assembly.routing.key
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
@@ -13,5 +14,9 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.main.allow-circular-references=true
+logging.level.org.springframework=DEBUG
+
+
 
 
