Conecta con el front

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=ExamenFabricaDeGauss2
 spring.rabbitmq.queue.production=productionQueue
 spring.rabbitmq.exchange=exchange
+server.port=8080
 spring.rabbitmq.queue.assembly=assemblyQueue
 spring.rabbitmq.routing.production=production.routing.key
 spring.rabbitmq.routing.assembly=assembly.routing.key
